force-app/main/default/objects/Pagamento__c/Pagamento__c.object-meta.xml
<CustomObject>
    <label>Pagamento</label>
    <nameField>
        <displayFormat>PAGTO-{0000000}</displayFormat>
        <label>Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>