force-app/main/default/objects/Pagamento__c/fields/AguardandoDevolucao__c.field-meta.xml
<CustomField>
    <fullName>AguardandoDevolucao__c</fullName>
    <label>Aguardando Devolução</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>