force-app/main/default/objects/Pagamento__c/fields/CodigoVoucher__c.field-meta.xml
<CustomField>
    <fullName>CodigoVoucher__c</fullName>
    <displayFormat>{MM}{000000}{YY}</displayFormat>
    <label>Código Voucher</label>
    <type>AutoNumber</type>
</CustomField>