force-app/main/default/objects/Pagamento__c/fields/OportunidadeOrigem__c.field-meta.xml
<CustomField>
    <fullName>OportunidadeOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade Origem</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pagamentos</relationshipLabel>
    <relationshipName>Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>