force-app/main/default/objects/Pagamento__c/fields/RevoSeats__c.field-meta.xml
<CustomField>
    <fullName>RevoSeats__c</fullName>
    <formula>RevoseatsOrigem__r.Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RevoSeats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>