force-app/main/default/objects/Pagamento__c/fields/RevoseatsOrigem__c.field-meta.xml
<CustomField>
    <fullName>RevoseatsOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevoSeats Origem</label>
    <referenceTo>LancamentoRevoSeat__c</referenceTo>
    <relationshipLabel>Pagamentos</relationshipLabel>
    <relationshipName>Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>