force-app/main/default/objects/Pagamento__c/fields/SaldoPagamento__c.field-meta.xml
<CustomField>
    <fullName>SaldoPagamento__c</fullName>
    <formula>ValorPagamento__c - (AguardandoDevolucao__c + TotalEmpenhado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>