force-app/main/default/objects/Pagamento__c/fields/SaldoRevoSeats__c.field-meta.xml
<CustomField>
    <fullName>SaldoRevoSeats__c</fullName>
    <formula>RevoSeats__c - TotalRevoSeatsEmpenhado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Revo Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>