force-app/main/default/objects/Pagamento__c/fields/StatusPagamento__c.field-meta.xml
<CustomField>
    <fullName>StatusPagamento__c</fullName>
    <label>Status do Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Efetuado</fullName>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Faturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>