force-app/main/default/objects/Pagamento__c/fields/TipoVoucher__c.field-meta.xml
<CustomField>
    <fullName>TipoVoucher__c</fullName>
    <label>Tipo de Voucher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor Fechado</fullName>
            </value>
            <value>
                <fullName>Valor Aberto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>