force-app/main/default/objects/Pagamento__c/fields/TotalEmpenhado__c.field-meta.xml
<CustomField>
    <fullName>TotalEmpenhado__c</fullName>
    <label>Total Empenhado</label>
    <summarizedField>Empenho__c.ValorEmpenho__c</summarizedField>
    <summaryForeignKey>Empenho__c.Pagamento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>