force-app/main/default/objects/Pagamento__c/fields/TotalRevoSeatsEmpenhado__c.field-meta.xml
<CustomField>
    <fullName>TotalRevoSeatsEmpenhado__c</fullName>
    <label>Total RevoSeats Empenhado</label>
    <summarizedField>Empenho__c.RevoSeatEmpenhado__c</summarizedField>
    <summaryForeignKey>Empenho__c.Pagamento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>