force-app/main/default/objects/Pagamento__c/fields/ValorPagamento__c.field-meta.xml
<CustomField>
    <fullName>ValorPagamento__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>