force-app/main/default/objects/Pagamento__c/recordTypes/Bonificacao.recordType-meta.xml
<RecordType>
    <fullName>Bonificacao</fullName>
    <active>true</active>
    <label>Bonificação</label>
</RecordType>