force-app/main/default/objects/Pagamento__c/recordTypes/Credito.recordType-meta.xml
<RecordType>
    <fullName>Credito</fullName>
    <active>true</active>
    <label>Crédito</label>
</RecordType>