force-app/main/default/objects/Pagamento__c/recordTypes/GatewayPagamento.recordType-meta.xml
<RecordType>
    <fullName>GatewayPagamento</fullName>
    <active>true</active>
    <label>Gateway Pagamento</label>
</RecordType>