force-app/main/default/objects/Pagamento__c/recordTypes/VoucherRevoSeats.recordType-meta.xml
<RecordType>
    <fullName>VoucherRevoSeats</fullName>
    <active>true</active>
    <label>Voucher RevoSeats</label>
</RecordType>