force-app/main/default/objects/Pagamento__c/validationRules/Boqueia_Saldo_Negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Boqueia_Saldo_Negativo</fullName>
    <active>true</active>
    <errorConditionFormula>SaldoPagamento__c &lt; 0</errorConditionFormula>
    <errorMessage>Saldo do Pagamento não pode ser Negativo!</errorMessage>
</ValidationRule>