force-app/main/default/objects/Pagamento__c/validationRules/Boqueia_Saldo_Negativo_RevoSeats.validationRule-meta.xml
<ValidationRule>
    <fullName>Boqueia_Saldo_Negativo_RevoSeats</fullName>
    <active>true</active>
    <errorConditionFormula>SaldoRevoSeats__c &lt; 0</errorConditionFormula>
    <errorMessage>Saldo RevoSeats do Pagamento não pode ser Negativo!</errorMessage>
</ValidationRule>